# trustsight

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  main.py  pyproject.toml  zensical.toml
.github/workflows/: corpus-drift.yml  mirror-check.yml  publishing.yml  test.yml
.seo-debug/: changelog.md.json  contributing_development-setup.md.json  contributing_index.md.json  contributing_re-baselining.md.json  contributing_writing-a-rule.md.json  explanation_benchmarks-and-methodology.md.json  explanation_cold-start-and-maturity.md.json  explanation_corpus-and-priors.md.json  explanation_index.md.json  explanation_sandbox-security-model.md.json  explanation_scoring-philosophy.md.json  explanation_trust-model.md.json  explanation_what-trustsight-cannot-see.md.json  getting-started_index.md.json  getting-started_installation.md.json  getting-started_quickstart.md.json  getting-started_reading-a-report.md.json  guides_acting-on-a-flag.md.json  guides_auditing-before-update.md.json  guides_configuring-rules-and-weights.md.json  guides_index.md.json  guides_running-the-sandbox.md.json  guides_tuning-false-positives.md.json  guides_using-in-ci.md.json  index.md.json  license.md.json  reference_cli.md.json  reference_configuration.md.json  reference_evidence-tiers.md.json  reference_exit-codes.md.json  reference_index.md.json  reference_report-schema.md.json  reference_rules.md.json  security.md.json
docs/: changelog.md  index.md  license.md  security.md
docs/contributing/: development-setup.md  index.md  re-baselining.md  writing-a-rule.md
docs/explanation/: benchmarks-and-methodology.md  cold-start-and-maturity.md  (+6 more)
overrides/: main.html
scripts/: aur_calibrate.py  build_corpus.py  gen_historical_holdout_fixtures.py  gen_injection_fixtures.py  gen_malicious_fixtures.py  generate_seed.py  rebaseline.py  strata.toml
site/: 404.html  index.html  search.json  sitemap.xml
tests/: test_analysis.py  test_buckets.py  test_cli.py  test_config.py  test_db.py  test_differ.py  test_docs.py  test_expanded_rules.py  test_lint.py  test_llm.py  test_novelty.py  test_rebaseline.py  test_rules.py  test_scenarios.py  test_schema.py  test_scoring.py  test_tokenizer.py
(+81 files in other folders)
