[project]
name = "trustsight"
version = "0.1.0"
description = "CLI-based AUR package update vetting tool"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Emiliano Gandini Outeda", email = "emiliano.gandini@protonmail.com" }
]
license = "MIT"
keywords = ["aur", "arch-linux", "security", "vetting", "pkgbuild"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Topic :: Security",
    "Topic :: System :: Archiving :: Packaging",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "pygit2>=1.15",
    "tldextract>=5.0",
    "rich>=13.0",
    "openai>=1.0",
]
license-files = ["LICENSE"]

[project.optional-dependencies]
ollama = ["ollama"]
dev = ["pytest", "ruff"]
docs = [
    "seoslug>=2.0.1",
    "zensical>=0.0.44",
]

[project.urls]
Documentation = "https://github.com/emiliano-go/trustsight"

[project.scripts]
trustsight = "trustsight.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/trustsight"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
